@@ -12,6 +12,16 @@
 
   ====================================================
 
+  29-10-2002 - settings
+    [u] strUseAcl
+    [+] strDeliverySettings
+    [+] strCacheType
+    [+] strCacheFiles
+    [+] strCacheDatabase
+    [+] strCacheShmop
+    [u] strUseConditionalKeys
+    [u] strUseMultipleKeys
+
   27-10-2002 - maintenance
     [-] strZoneCache
     [-] strRebuildZoneCache
